Perkin-UAT/force-app/main/default/objects/C_META_Pack_Type__mdt/C_META_Pack_Type__mdt.object-meta.xml
<CustomObject>
    <description>This is the Product Line and Igor code Pack Type</description>
    <label>C.META Pack Type</label>
    <pluralLabel>C.META Pack Type</pluralLabel>
</CustomObject>