Perkin-UAT/force-app/main/default/objects/C_META_Pack_Type__mdt/fields/IGOR_Class__c.field-meta.xml
<CustomField>
    <fullName>IGOR_Class__c</fullName>
    <label>IGOR Class</label>
    <length>10</length>
    <type>Text</type>
</CustomField>