Perkin-UAT/force-app/main/default/objects/C_META_Pack_Type__mdt/fields/Pack_Type__c.field-meta.xml
<CustomField>
    <fullName>Pack_Type__c</fullName>
    <label>Pack Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small Pack</fullName>
                <default>true</default>
                <label>Small Pack</label>
            </value>
            <value>
                <fullName>Large Pack</fullName>
            </value>
            <value>
                <fullName>SP-RH</fullName>
            </value>
            <value>
                <fullName>SP-RAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>