Perkin-UAT/force-app/main/default/objects/C_META_Pack_Type__mdt/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APS</fullName>
                <default>true</default>
                <label>APS</label>
            </value>
            <value>
                <fullName>ARS</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>BBT</fullName>
            </value>
            <value>
                <fullName>CAT</fullName>
            </value>
            <value>
                <fullName>CCM</fullName>
            </value>
            <value>
                <fullName>CLH</fullName>
            </value>
            <value>
                <fullName>CLR</fullName>
            </value>
            <value>
                <fullName>CSB</fullName>
            </value>
            <value>
                <fullName>CVD</fullName>
            </value>
            <value>
                <fullName>DIA</fullName>
            </value>
            <value>
                <fullName>EZR</fullName>
            </value>
            <value>
                <fullName>FAP</fullName>
            </value>
            <value>
                <fullName>HCA</fullName>
            </value>
            <value>
                <fullName>HCS</fullName>
            </value>
            <value>
                <fullName>HMG</fullName>
            </value>
            <value>
                <fullName>HTS</fullName>
            </value>
            <value>
                <fullName>IAS</fullName>
            </value>
            <value>
                <fullName>ICL</fullName>
            </value>
            <value>
                <fullName>INV</fullName>
            </value>
            <value>
                <fullName>INVB</fullName>
            </value>
            <value>
                <fullName>LSB</fullName>
            </value>
            <value>
                <fullName>MCB</fullName>
            </value>
            <value>
                <fullName>MDX</fullName>
            </value>
            <value>
                <fullName>MFT</fullName>
            </value>
            <value>
                <fullName>MLD</fullName>
            </value>
            <value>
                <fullName>MOL</fullName>
            </value>
            <value>
                <fullName>MOX</fullName>
            </value>
            <value>
                <fullName>MSD</fullName>
            </value>
            <value>
                <fullName>NAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>