Perkin-UAT/force-app/main/default/objects/C_META_Pack_Type__mdt/listViews/C_META_Pack_Type_ALL.listView-meta.xml
<ListView>
    <fullName>C_META_Pack_Type_ALL</fullName>
    <columns>MasterLabel</columns>
    <columns>Product_Line__c</columns>
    <columns>IGOR_Class__c</columns>
    <columns>Pack_Type__c</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <label>C.META Pack Type (ALL)</label>
    <language>en_US</language>
</ListView>