Perkin-UAT/force-app/main/default/objects/C_META_Pack_Type__mdt/listViews/C_META_Pack_Type_SP.listView-meta.xml
<ListView>
    <fullName>C_META_Pack_Type_SP</fullName>
    <columns>MasterLabel</columns>
    <columns>Product_Line__c</columns>
    <columns>IGOR_Class__c</columns>
    <columns>Pack_Type__c</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pack_Type__c</field>
        <operation>equals</operation>
        <value>Small Pack,SP-RH,SP-RAD</value>
    </filters>
    <label>C.META Pack Type (SP)</label>
    <language>en_US</language>
</ListView>